# Colossus

./: .gitignore  README.md  cargo.toml  rustfmt.toml
colossus-core/: Cargo.toml
colossus-core/src/: build.rs  configuration.rs  directory.rs  lib.rs
colossus-core/src/acc/: encryptedheader.rs  keys.rs  mod.rs
colossus-core/src/acc/cryptography/: ae.rs  primitives.rs  traits.rs
colossus-core/src/acc/kem/: mod.rs
colossus-core/src/acc/keys/: master.rs  rights.rs  tracing.rs  user.rs
colossus-core/src/access_control/: encrypted_header.rs  mod.rs  root_api.rs  root_authority.rs  test_utils.rs
colossus-core/src/access_control/cryptography/: ae.rs  mlkem.rs  mod.rs  nike.rs  traits.rs
colossus-core/src/akd/: akd_label.rs  akd_value.rs  auditor.rs  azks.rs  errors.rs  local_auditing.rs  mod.rs  node_label.rs  proofs.rs  test_utils.rs  tree_node.rs  utils.rs
colossus-core/src/akd/azks/: element.rs  element_set.rs  parallelism.rs  tests.rs
colossus-core/src/akd/ecvrf/: ecvrf_impl.rs  mod.rs  tests.rs
colossus-core/src/akd/errors/: auditor.rs  azks.rs  directory.rs  parallelism.rs  storage.rs  tree_node.rs  verification.rs  vrf.rs
colossus-core/src/akd/tests/: mod.rs  test_config_node_labels.rs  test_core_protocol.rs  test_errors.rs  test_preloads.rs
colossus-core/src/akd/verify/: base.rs  history.rs  lookup.rs  mod.rs
colossus-core/src/configuration/: colossus.rs
colossus-core/src/policy/: access_policy.rs  access_structure.rs  attribute.rs  dimension.rs  errors.rs  mod.rs  rights.rs  tests.rs
colossus-core/src/proto/: mod.rs  tests.rs
colossus-core/src/proto/specs/: types.rs
colossus-core/src/storage/: cache.rs  ecvrf.rs  memory.rs  mod.rs  tests.rs  traits.rs  transaction.rs  types.rs
colossus-core/src/storage/cache/: high_parallelism.rs  tests.rs
colossus-core/src/storage/manager/: mod.rs  tests.rs
colossus-demo/: Cargo.toml
colossus-demo/src/: errors.rs
colossus-demo/src/cap/: capabilities.rs  manager.rs
colossus-demo/src/cpabe/: policy.rs
crates/akd/: Cargo.toml
crates/akd/src/: append_only_zks.rs  auditor.rs  colossus.rs  directory.rs  helper_structs.rs  lib.rs  local_auditing.rs  tree_node.rs  utils.rs
crates/akd/src/storage/: cache.rs  ecvrf.rs  memory.rs  mod.rs  tests.rs  traits.rs  transaction.rs  types.rs
crates/akd/src/storage/cache/: high_parallelism.rs  tests.rs
crates/akd/src/storage/manager/: mod.rs  tests.rs
crates/akd/src/tests/: mod.rs  test_config_node_labels.rs  test_core_protocol.rs  test_errors.rs  test_preloads.rs
crates/akd/src/verify/: base.rs  history.rs  lookup.rs  mod.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs  utils.rs
crates/covercrypt/: Cargo.toml
crates/cryptography/: Cargo.toml
crates/cryptography/src/: lib.rs
crates/cryptography/src/dsa/rpo_falcon512/keys/: secret_key.rs
crates/cryptography/src/dsa/rpo_falcon512/math/: ffsampling.rs  fft.rs  mod.rs  samplerz.rs
crates/cryptography/src/ecvrf/: ecvrf_impl.rs  mod.rs  tests.rs  traits.rs
crates/cryptography/src/hash/blake/: mod.rs
crates/cryptography/src/kem/: mlkem.rs
crates/cryptography/src/nike/: mod.rs  r25519.rs
crates/cryptography/src/utils/: mod.rs
crates/cryptography/src/word/: mod.rs
crates/errors/: Cargo.toml
crates/errors/src/: akd_errors.rs  lib.rs
crates/types/: Cargo.toml
crates/types/src/: configuration.rs  errors.rs  hash.rs  helpers.rs  lib.rs  node_label.rs  policy.rs
crates/types/src/configuration/: colossus.rs
crates/types/src/data_struct/: revision_vec.rs
crates/types/src/errors/: akd_errors.rs  cryptography_errors.rs
crates/types/src/node_label/: definition.rs  test.rs
crates/types/src/policy/: access_policy.rs  access_structure.rs  dimension.rs  rights.rs
crates/types/src/proto/: mod.rs  tests.rs
crates/types/src/proto/specs/: mod.rs  types.proto
docs/: Exploration.md  Healthcare.md  Miden.md
example/: Cargo.toml
example/src/: lib.rs
example/src/cap/: mod.rs
example/src/cpabe/: manager.rs  mod.rs
example/src/did/: identity.rs  manager.rs  mod.rs
explorations/healthcare/: Cargo.toml
explorations/healthcare/src/: cap_manager.rs  cpabe_manager.rs  did_manager.rs  lib.rs  types.rs  zt_manager.rs
