[package]
name = "colossus-demo"
version = "1.0.0-beta.1"
description = ""
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }


[dependencies]
colossus-core = { workspace = true }

miden-client = { version = "0.10"}
miden-core = { version = "0.16"}
miden-vm = { version = "0.16"}
miden-tx = { version = "0.10"}

# UCAN for capability-based authorization
ucan = { version = "0.4"}
ucan-key-support = { version = "0.1.7"}

# DID frameworks
did-key = "0.2"
identity_iota = "1.5"
identity_did = "1.5"

# Zero Trust and Security
tokio = { version = "1.46.1", features = ["rt", "sync", "time", "macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = { version = "2.0", default-features = false }
anyhow = "1.0"


[dev-dependencies]
tokio-test = "0.4.4"
tokio = { version = "1.46.1", features = ["rt", "sync", "time", "macros", "rt-multi-thread"] }
