[package]
name = "colossus-akd"
version = "1.0.0-beta.1"
description = ""
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }


[dependencies]
colossus-cryptography = { workspace = true }
colossus-common = { workspace = true }
colossus-errors = { workspace = true }
colossus-types = { workspace = true }

async-recursion = {workspace = true}
async-trait = {workspace = true}
curve25519-dalek = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
rand_core = {workspace = true}
rand-utils = {workspace =  true}
zeroize = { workspace = true }
ed25519-dalek = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }
paste = {workspace = true}
tokio = { version = "1.46", features = ["sync", "time", "rt"] }
colored = { workspace = true }
log = { workspace = true }
once_cell = { workspace = true }
protobuf = { workspace = true }

[dev-dependencies]
criterion = "0.6.0"
serial_test = "3.2.0"
proptest = "1.7"
proptest-derive = "0.6"
colored = { workspace = true }
once_cell = "1.21.3"
ctor = "0.4"
tokio-test = "0.4.4"
tokio = { version = "1.46.1", features = ["rt", "sync", "time", "macros", "rt-multi-thread"] }
mockall = "0.13"
futures = "0.3"
itertools = "0.14"
rand_chacha = { version = "0.9", default-features = false }
getrandom = { version = "0.3", default-features = false }
