[package]
name = "colossus-cryptography"
version = "1.0.0-beta.1"
description = ""
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }


[dependencies]
colossus-errors = { workspace = true }
colossus-types = { workspace = true }

curve25519-dalek = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
hex = { workspace = true }
zeroize = { workspace = true }
ed25519-dalek = { workspace = true }
async-trait = { workspace = true }
winter-crypto = { workspace = true }
winter-math = { workspace = true }
winter-utils = { workspace = true }
thiserror  = {workspace = true}
rand = { workspace = true }
rand-utils = { workspace = true }
rand_core = { workspace = true }
hashbrown = { workspace = true }
blake3 = { workspace = true }
num = { workspace = true }
num-complex = { workspace = true }
sha3 = { workspace = true }

[dev-dependencies]
bincode = "1"
proptest-derive = "0.4"
serde = { version = "1", features = ["derive"] }
paste = { version = "1" }
assert_matches = { version = "1.5", default-features = false }
criterion = { version = "0.6", features = ["html_reports"] }
getrandom = { version = "0.3", default-features = false }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
itertools = { version = "0.14" }
proptest = { version = "1.7", default-features = false, features = ["alloc"] }
rand_chacha = { version = "0.9", default-features = false }
rand-utils = { version = "0.13", package = "winter-rand-utils" }
rstest = { version = "0.25" }
seq-macro = { version = "0.3" }
