[package]
name = "colossus-types"
version = "1.0.0-beta.1"
description = ""
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }
build = "src/build.rs"

[build-dependencies]
protobuf-codegen = "3"
protobuf-parse = "3"

[dependencies]
colossus-common = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
hex = { workspace = true }
blake3 = { workspace = true }
paste = { workspace = true }
protobuf = { workspace = true }

[dev-dependencies]
bincode = "1"
itertools = "0.13"
proptest = "1.7.0"
proptest-derive = "0.6"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
criterion = "0.5"
paste = { workspace = true }
