
[package]
name = "colossus-explore-healthcare"
version = "1.0.0-beta.1"
description = ""
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
colossus-core = { workspace = true }

# UCAN for capability-based authorization
ucan = { version = "0.4"}
ucan-key-support = { version = "0.1.7"}

# DID Framework (IOTA Identity)
identity_iota = { version = "1.5.0", features = ["memstore"] }
iota-sdk = { version = "1.1.5", features = ["tls", "client", "stronghold"] }

tokio = { version = "1.46", features = ["sync", "time", "rt"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "2.0"
log = { workspace = true }
env_logger = "0.11.8"

serde = { workspace = true }
serde_json = { workspace = true }
serde_bytes = { workspace = true }

cosmian_crypto_core = { workspace = true }
curve25519-dalek = { workspace = true }

ed25519-dalek = { workspace = true }
rand = { workspace = true }
rand_core = {workspace = true}
rand-utils = {workspace =  true}
blake3 = { workspace = true }
zeroize = { workspace = true }
async-recursion = {workspace = true}
async-trait = {workspace = true}
reqwest = { version = "0.11", features = ["json"] }
axum = "0.7"
tower = "0.4"
base64 = "0.21"


[dev-dependencies]
# criterion = "0.6.0"
# serial_test = "3.2.0"
# proptest = "1.7"
# proptest-derive = "0.6"
# colored = { workspace = true }
# once_cell = "1.21.3"
# ctor = "0.4"
# tokio-test = "0.4.4"
# tokio = { version = "1.46.1", features = ["rt", "sync", "time", "macros", "rt-multi-thread"] }
# mockall = "0.13"
# futures = "0.3"
# itertools = "0.14"
# rand_chacha = { version = "0.9", default-features = false }
# getrandom = { version = "0.3", default-features = false }
# bincode = "1"
# serde = { version = "1", features = ["derive"] }
# paste = { version = "1" }
# assert_matches = { version = "1.5", default-features = false }
# hex = { version = "0.4", default-features = false, features = ["alloc"] }
# rand-utils = { version = "0.13", package = "winter-rand-utils" }
# rstest = { version = "0.25" }
# seq-macro = { version = "0.3" }
